Applied most suggestions made by IntelliJ to the code. Fixed a ton of bugs in the process.