@@ -35,9 +35,6 @@ public class SpecsCollections {
     /**
      * Returns the elements from the given index, until the end of the list.
      *
-     * @param list
-     * @param startIndex
-     * @return
      */
     public static <E> List<E> subList(List<E> list, int startIndex) {
         return list.subList(startIndex, list.size());
@@ -63,8 +60,6 @@ public class SpecsCollections {
     /**
      * Returns the last element of the list, or null if the list is empty.
      *
-     * @param lines
-     * @return
      */
     public static <K> K last(List<K> lines) {
         if (lines.isEmpty()) {
@@ -81,8 +76,6 @@ public class SpecsCollections {
      * Returns the last element of the list, or an empty Optional if the list is
      * empty.
      *
-     * @param lines
-     * @return
      */
     public static <K> Optional<K> lastTry(List<K> lines) {
         if (lines.isEmpty()) {
@@ -106,17 +99,11 @@ public class SpecsCollections {
     /**
      * Creates an Iterable from an iterator, so it can be used in for:each loops.
      *
-     * @param iterator
-     * @return
      */
     public static <K> Iterable<K> iterable(final Iterator<K> iterator) {
         return () -> iterator;
     }
 
-    /**
-     * @param a
-     * @return
-     */
     @SafeVarargs
     public static <T> Set<T> asSet(T... a) {
         return new HashSet<>(Arrays.asList(a));
@@ -125,9 +112,6 @@ public class SpecsCollections {
     /**
      * If an element is null, ignores it.
      *
-     * @param superClass
-     * @param elements
-     * @return
      */
     public static <T> List<T> asListT(Class<T> superClass, Object... elements) {
         List<T> list = new ArrayList<>();
@@ -161,8 +145,6 @@ public class SpecsCollections {
     /**
      * Creates a new list sorted list from the given collection.
      *
-     * @param keySet
-     * @return
      */
     public static <T extends Comparable<? super T>> List<T> newSorted(Collection<T> collection) {
         // Create list
@@ -178,9 +160,6 @@ public class SpecsCollections {
      * Removes the tokens from the list from startIndex, inclusive, to endIndex,
      * exclusive.
      *
-     * @param list
-     * @param startIndex
-     * @param endIndex
      */
     public static <T> List<T> remove(List<T> list, int startIndex, int endIndex) {
         List<T> removedElements = new ArrayList<>();
@@ -214,9 +193,6 @@ public class SpecsCollections {
      * Removes from the list the elements that match the predicate, returns the
      * removed elements.
      *
-     * @param list
-     * @param filter
-     * @return
      */
     public static <T> List<T> remove(List<T> list, Predicate<T> filter) {
 
@@ -235,7 +211,7 @@ public class SpecsCollections {
     }
 
     public static <T, U extends T> List<U> remove(List<T> list, Class<U> targetClass) {
-        return castUnchecked(remove(list, element -> targetClass.isInstance(element)), targetClass);
+        return castUnchecked(remove(list, targetClass::isInstance), targetClass);
     }
 
     public static <T> T removeLast(List<T> list) {
@@ -258,16 +234,13 @@ public class SpecsCollections {
      * Returns the first index of object that is an instance of the given class.
      * Returns -1 if no object is found that is instance of the class.
      *
-     * @param aClass
-     * @param types
-     * @return
      */
     public static <T> int getFirstIndex(List<? super T> list, Class<T> aClass) {
         if (list == null || list.isEmpty()) {
             return -1;
         }
 
-        var comparator = (aClass == null) ? (Predicate<Object>) (o -> o == null)
+        var comparator = (aClass == null) ? (Predicate<Object>) (Objects::isNull)
                 : (Predicate<Object>) aClass::isInstance;
 
         // Find first index that matches the class
@@ -284,14 +257,10 @@ public class SpecsCollections {
      * Returns the first object that is an instance of the given class. Returns null
      * if no object is found that is instance of the class.
      *
-     * @param aClass
-     * @param types
-     * @return
      */
     public static <T> T getFirst(List<? super T> list, Class<T> aClass) {
 
-        for (int i = 0; i < list.size(); i++) {
-            Object obj = list.get(i);
+        for (Object obj : list) {
             if (aClass.isInstance(obj)) {
                 return aClass.cast(obj);
             }
@@ -304,8 +273,6 @@ public class SpecsCollections {
      * Returns true if all the elements in the list are instances of the given
      * class.
      *
-     * @param inputTypes
-     * @return
      */
     public static <T> boolean areOfType(Class<T> aClass, List<? super T> list) {
         for (Object object : list) {
@@ -321,9 +288,6 @@ public class SpecsCollections {
      * Adds the elements of the provider collection to the receiver collection.
      * Returns the receiver collection.
      *
-     * @param receiver
-     * @param provider
-     * @return
      */
     public static <U, T extends Collection<U>> T add(T receiver, T provider) {
         receiver.addAll(provider);
@@ -334,9 +298,6 @@ public class SpecsCollections {
      * Casts a list of one type to another type, and checks if all elements can be
      * cast to the target type.
      *
-     * @param list
-     * @param aClass
-     * @return
      */
     public static <T> SpecsList<T> cast(List<?> list, Class<T> aClass) {
         // Verify if all elements implement the type of the class
@@ -363,9 +324,6 @@ public class SpecsCollections {
      * Casts a list of one type to another type, without checking if the elements
      * can be cast to the target type.
      *
-     * @param list
-     * @param aClass
-     * @return
      */
     @SuppressWarnings("unchecked")
     public static <T> List<T> castUnchecked(List<?> list, Class<T> aClass) {
@@ -378,9 +336,6 @@ public class SpecsCollections {
      * <p>
      * If the element is null, list remains the same.
      *
-     * @param list
-     * @param element
-     * @return
      */
     public static <K> SpecsList<K> concat(Collection<? extends K> list, K element) {
         return concat(list, ofNullable(element));
@@ -392,9 +347,6 @@ public class SpecsCollections {
      * <p>
      * If the element is null, list remains the same.
      *
-     * @param element
-     * @param list
-     * @return
      */
     public static <K> SpecsList<K> concat(K element, Collection<? extends K> list) {
         return concat(ofNullable(element), list);
@@ -412,9 +364,6 @@ public class SpecsCollections {
     /**
      * If the list is modifiable, adds directly to it.
      *
-     * @param list
-     * @param element
-     * @return
      */
     public static <K> List<K> concatList(List<? extends K> list, K element) {
         try {
@@ -431,9 +380,6 @@ public class SpecsCollections {
     /**
      * If the first list is modifiable, adds directly to it.
      *
-     * @param list1
-     * @param list2
-     * @return
      */
     public static <K> List<K> concatList(List<? extends K> list1, List<? extends K> list2) {
         try {
@@ -450,8 +396,6 @@ public class SpecsCollections {
     /**
      * Creates a list with the elements from the given collections.
      *
-     * @param collections
-     * @return
      */
     @SafeVarargs
     public static <K> List<K> concatLists(Collection<? extends K>... collections) {
@@ -471,10 +415,6 @@ public class SpecsCollections {
     /**
      * Converts an array from one type to another.
      *
-     * @param origin
-     * @param destination
-     * @param converter
-     * @return
      */
     public static <O, D> D[] convert(O[] origin, D[] destination, Function<O, D> converter) {
         for (int i = 0; i < origin.length; i++) {
@@ -490,23 +430,17 @@ public class SpecsCollections {
      *
      * <p>
      * Source:
-     * http://stackoverflow.com/questions/22725537/using-java-8s-optional-with-streamflatmap
+     * <a href="http://stackoverflow.com/questions/22725537/using-java-8s-optional-with-streamflatmap">...</a>
      */
     public static <T> Stream<T> toStream(Optional<T> opt) {
-        if (opt.isPresent()) {
-            return Stream.of(opt.get());
-        }
+        return opt.stream();
 
-        return Stream.empty();
     }
 
     /**
      * Filters the elements of a Collection according to a map function over the
      * elements of that collection.
      *
-     * @param elements
-     * @param mapFunction
-     * @return
      */
     public static <T, F> List<T> filter(Collection<T> elements, Function<T, F> mapFunction) {
         return filter(elements.stream(), mapFunction);
@@ -516,9 +450,6 @@ public class SpecsCollections {
      * Filters the elements of a Stream according to a map function over the
      * elements of that collection.
      *
-     * @param elements
-     * @param mapFunction
-     * @return
      */
     public static <T, F> List<T> filter(Stream<T> elements, Function<T, F> mapFunction) {
 
@@ -540,9 +471,6 @@ public class SpecsCollections {
      * Removes all the elements at the head that are an instance of the given class,
      * returns a new list with those elements.
      *
-     * @param aClass
-     * @param list
-     * @return
      */
     public static <T, ET extends T> List<ET> pop(List<T> list, Class<ET> aClass) {
         if (list.isEmpty()) {
@@ -578,9 +506,6 @@ public class SpecsCollections {
     /**
      * Removes the first element of the list, checking if it is of the given class.
      *
-     * @param list
-     * @param aClass
-     * @return
      */
     public static <T, ET extends T> ET popSingle(List<T> list, Class<ET> aClass) {
         if (list.isEmpty()) {
@@ -594,9 +519,6 @@ public class SpecsCollections {
      * Returns all the elements at the head that are an instance of the given class,
      * returns a new list with those elements.
      *
-     * @param list
-     * @param aClass
-     * @return
      */
     public static <T, ET extends T> List<ET> peek(List<T> list, Class<ET> aClass) {
         if (list.isEmpty()) {
@@ -620,19 +542,13 @@ public class SpecsCollections {
     }
 
     public static <T> List<T> toList(Optional<T> optional) {
-        if (!optional.isPresent()) {
-            return Collections.emptyList();
-        }
+        return optional.map(Arrays::asList).orElse(Collections.emptyList());
 
-        return Arrays.asList(optional.get());
     }
 
     /**
      * Checks if the given object is an instance of any of the given classes.
      *
-     * @param object
-     * @param classes
-     * @return
      */
     public static <T> boolean instanceOf(T object, Collection<Class<? extends T>> classes) {
         for (Class<?> aClass : classes) {
@@ -648,23 +564,19 @@ public class SpecsCollections {
      * Creates a list with the given element, unless it is null. In that case,
      * returns an empty list.
      *
-     * @param element
-     * @return
      */
     public static <T> List<T> ofNullable(T element) {
         if (element == null) {
             return Collections.emptyList();
         }
 
-        return Arrays.asList(element);
+        return List.of(element);
     }
 
     /**
      * Accepts lists that have at most one element, return the element if present,
      * or null otherwise.
      *
-     * @param selectCond
-     * @return
      */
     public static <T> T orElseNull(List<T> list) {
         Preconditions.checkArgument(list.size() < 2, "Expected list size to be less than 2, it is " + list.size());
@@ -704,12 +616,10 @@ public class SpecsCollections {
     /**
      * Adds to the list if element is present, and does nothing otherwise.
      *
-     * @param includes
-     * @param element
      */
     public static <T> void addOptional(Collection<T> includes, Optional<T> element) {
 
-        if (!element.isPresent()) {
+        if (element.isEmpty()) {
             return;
         }
 
@@ -736,15 +646,13 @@ public class SpecsCollections {
     }
 
     /**
-     * @param list
      * @return a stream of the elements of the list, in reverse order
      */
     public static <T> Stream<T> reverseStream(List<T> list) {
-        return reverseIndexStream(list).mapToObj(i -> list.get(i));
+        return reverseIndexStream(list).mapToObj(list::get);
     }
 
     /**
-     * @param list
      * @return a stream of indexes to the list, in reverse order
      */
     public static <T> IntStream reverseIndexStream(List<T> list) {
@@ -757,9 +665,6 @@ public class SpecsCollections {
     /**
      * Collects all instances of the given class from the stream.
      *
-     * @param stream
-     * @param aClass
-     * @return
      */
     public static <T> List<T> toList(Stream<? super T> stream, Class<T> aClass) {
         return stream.filter(aClass::isInstance)
@@ -770,23 +675,16 @@ public class SpecsCollections {
     /**
      * Converts a list of String providers to a String array.
      *
-     * @param values
-     * @return
      */
     public static <T extends KeyProvider<String>> String[] toStringArray(Collection<T> values) {
         return values.stream()
-                .map(KeyProvider<String>::getKey)
-                .collect(Collectors.toList())
-                .toArray(new String[0]);
+                .map(KeyProvider::getKey).toArray(String[]::new);
     }
 
     /**
      * Converts a collection to a set, applying the given mapper to each of the
      * elements.
      *
-     * @param collection
-     * @param mapper
-     * @return
      */
     public static <T, R> Set<R> toSet(Collection<T> collection, Function<? super T, R> mapper) {
         return collection.stream().map(mapper).collect(Collectors.toSet());
@@ -815,13 +713,11 @@ public class SpecsCollections {
 
     public static <T1, T2> List<T2> toList(T1[] array, Function<T1, T2> mapper) {
         return Arrays.stream(array)
-                .map(value -> mapper.apply(value))
+                .map(mapper)
                 .collect(Collectors.toList());
     }
 
     /**
-     * @param list
-     * @param targetClass
      * @return a list with the elements that are an instance of the given class
      */
     public static <T> List<T> get(List<? super T> list, Class<T> targetClass) {
@@ -835,8 +731,6 @@ public class SpecsCollections {
      * Converts the definition to an optional. If the list contains more than one
      * element, throws an exception.
      *
-     * @param definition
-     * @return
      */
     public static <K> Optional<K> toOptional(Collection<K> collection) {
         SpecsCheck.checkArgument(collection.size() < 2,
@@ -847,8 +741,6 @@ public class SpecsCollections {
     }
 
     /**
-     * @param <K>
-     * @param collections
      * @return a set with the elements common to all given collections
      */
     public static <K> Set<K> and(Collection<Collection<K>> collections) {
@@ -879,8 +771,6 @@ public class SpecsCollections {
     }
 
     /**
-     * @param <K>
-     * @param collections
      * @return a set with the elements of all given collections
      */
     public static <K> Set<K> or(Collection<Collection<K>> collections) {
@@ -907,12 +797,6 @@ public class SpecsCollections {
      * otherwise uses the given Supplier to create the first value, associates it in
      * the map, and returns it.
      *
-     * @param <K>
-     * @param <V>
-     * @param sittings
-     * @param name
-     * @param hashMap
-     * @return
      */
     public static <K, V> V getOrSet(Map<K, V> map, K key, Supplier<V> defaultValue) {
 
